[project]
name = "genetic-algorithm-pytorch"
version = "0.0.1"
description = "MMDiT"
authors = [
    { name = "Phil Wang", email = "lucidrains@gmail.com" }
]
readme = "README.md"
requires-python = ">= 3.9"
license = { file = "LICENSE" }
keywords = [
    'artificial intelligence',
    'genetic algorithms',
]

classifiers=[
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.9',
]

dependencies = [
    "torch>=2.0",
    "einx>=0.3.0",
    "einops>=0.8.0"
]

[project.urls]
Homepage = "https://pypi.org/project/genetic-algorithm-pytorch/"
Repository = "https://github.com/lucidrains/genetic-algorithm-pytorch"

[project.optional-dependencies]
examples = []
test = [
    "pytest"
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["genetic_algorithm_pytorch"]
